src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Campaign_ID__c</fullName>
        <displayFormat>C-{000000}</displayFormat>
        <label>Campaign ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>DB_Campaign_Tactic__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Campaign Tactic</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Print Advertisement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment Seminars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lunches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Call Down</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Banners/Ads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Website</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Area__c</fullName>
        <description>Set by workflow for use by BI</description>
        <label>Sales Area</label>
        <picklist>
            <picklistValues>
                <fullName>1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0630</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3670</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FO91</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FO92</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0540</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LO NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>actimizerdialer__ActimizerOpenContacts__c</fullName>
        <label>Actimizer Open Contacts</label>
        <summaryFilterItems>
            <field>CampaignMember.ContactId</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CampaignMember.actimizerdialer__ActimizerStatus__c</field>
            <operation>notEqual</operation>
            <value>No Interest</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CampaignMember.actimizerdialer__ActimizerStatus__c</field>
            <operation>notEqual</operation>
            <value>Success</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CampaignMember.actimizerdialer__ActimizerStatus__c</field>
            <operation>notEqual</operation>
            <value>Scheduled Redial</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>actimizerdialer__ActimizerOpenLeads__c</fullName>
        <label>Actimizer Open Leads</label>
        <summaryFilterItems>
            <field>CampaignMember.ContactId</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CampaignMember.actimizerdialer__ActimizerStatus__c</field>
            <operation>notEqual</operation>
            <value>No Interest</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CampaignMember.actimizerdialer__ActimizerStatus__c</field>
            <operation>notEqual</operation>
            <value>Success</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CampaignMember.actimizerdialer__ActimizerStatus__c</field>
            <operation>notEqual</operation>
            <value>Scheduled Redial</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>actimizerdialer__ActimizerTransferPhone__c</fullName>
        <description>Specify a phone number which will be used to transfer current call</description>
        <inlineHelpText>Specify a phone number which will be used to transfer current call</inlineHelpText>
        <label>Actimizer Transfer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>actimizerdialer__CallerPhone__c</fullName>
        <description>Specify a phone number which will be displayed to a callee (Caller ID)</description>
        <inlineHelpText>Specify a phone number which will be displayed to a callee (Caller ID)</inlineHelpText>
        <label>Actimizer Caller ID</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>actimizerdialer__MaxCallAttempts__c</fullName>
        <label>Actimizer Max Call Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>actimizerdialer__PreviewDuration__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actimizer Preview Duration</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>actimizerdialer__Priority__c</fullName>
        <label>Actimizer Campaign Priority</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>AllWebCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>contains</operation>
            <value>web</value>
        </filters>
        <label>All Web Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>